fix slider track visibility in windows high contrast modes

--- a/coral-component-slider/src/styles/index.styl
+++ b/coral-component-slider/src/styles/index.styl
@@ -20,3 +20,13 @@
 coral-slider-item {
   display: none;
 }
+
+@media (forced-colors: active) {
+  ._coral-Slider-track {
+    height: 0;
+  }
+  
+  ._coral-Slider-track::before {
+    border: 1px solid;
+  }
+}
